[project]
name = "flask-rbac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.4",
    "authlib==1.6.9",
    "blinker==1.9.0",
    "cffi==2.0.0",
    "click==8.3.1",
    "cryptography==41.0.7",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "flask==3.0.0",
    "flask-login==0.6.3",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf>=1.2.1",
    "greenlet==3.3.2",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "pycparser==3.0",
    "pymysql==1.1.0",
    "python-dotenv==1.0.0",
    "requests>=2.34.2",
    "sqlalchemy==2.0.48",
    "typing-extensions==4.15.0",
    "werkzeug==3.0.1",
    "wtforms==3.2.1",
]
